--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
     text-decoration: none;
-    /* font-family: 'globalfont','Pretendard-Regular'; */
+    font-family: 'Poppins','Pretendard-Regular';
 }
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -33,7 +33,7 @@ button{
     padding:0;
     overflow:visible;
     cursor:pointer;
-    /* font-family: 'globalfont','Pretendard-Regular'; */
+    font-family: 'Poppins','Pretendard-Regular';
 }
 body {
 	line-height: 1;
@@ -62,21 +62,15 @@ table {
 }
 /* font */
 @font-face {
-    font-family: 'TTWanjudaedunsancheB';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/TTWanjudaedunsancheB.woff2') format('woff2');
-    font-weight: 700;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'globalfont';
-    src: url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap') format('woff2');
+    font-family: 'Poppins';
+    src: url('../font/Poppins-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
     unicode-range: U+0041-005A,U+0061-007A;
 }
 @font-face {
    font-family: 'Pretendard-Regular';
-   src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+   src: url('../font/Pretendard-Regular.otf') format('opentype');
    font-weight: 400;
    font-style: normal;
    unicode-range: U+AC00-D7A3;
