--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,8 +63,8 @@ table {
 /* font */
 @font-face {
     font-family: 'Poppins';
-    src: url('../font/Poppins-Medium.ttf') format('truetype');
-    font-weight: 500;
+    src: url('../font/Poppins-Regular.ttf') format('truetype');
+    font-weight: 400;
     font-style: normal;
     unicode-range: U+0041-005A,U+0061-007A;
 }
@@ -73,7 +73,7 @@ table {
    src: url('../font/Pretendard-Regular.otf') format('opentype');
    font-weight: 400;
    font-style: normal;
-   unicode-range: U+AC00-D7A3;
+   unicode-range: U+AC00-D7A3,U+0030-0039;
 }
 /* parallax__cont */
 .parallax__item {
@@ -844,8 +844,12 @@ table {
    .s_contents .img_box {
       padding-top: calc( 50 * var(--unit-fx));
    }
+   .s_contents .img_box video {
+      width: 100%;
+   }
    .s_contents .img_box > div {
       padding-bottom: calc( 50 * var(--unit-fx));
+      margin: 0 1em;
    }
    .s_contents .img_box .half {
       width:100%;
@@ -865,7 +869,7 @@ table {
       font-size: calc( 40 * var(--unit-fx));
    }
    #section1 .title {
-      font-size: calc( 40 * var(--unit-fx));
+      font-size: calc( 35 * var(--unit-fx));
    }
    #section2,
    #section3,
